--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
   mockito: ^5.0.16
   build_runner: ^2.1.5
   bloc_test: ^9.0.0
+  test: ^1.19.0
 
 flutter:
   uses-material-design: true
